# sistema_ordens_servicos

./: .flaskenv  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pdm.toml  pyproject.toml  requirements.txt
src/controllers/: client_create_controller.py  client_list_controller.py
src/controllers/brand/: brand_create_controller.py  brand_delete_controller.py  brand_detail_controller.py  brand_list_controller.py
src/controllers/client/: client_create_controller.py  client_delete_controller.py  client_detail_controller.py  client_list_controller.py
src/controllers/education/: education_create_controller.py  education_delete_controller.py  education_detail_controller.py  education_list_controller.py
src/controllers/employee/: employee_create_controller.py  employee_delete_controller.py  employee_detail_controller.py  employee_list_controller.py
src/controllers/employee_position/: employee_position_create_controller.py  employee_position_delete_controller.py  employee_position_detail_controller.py  employee_position_list_controller.py
src/controllers/enterprise/: enterprise_create_controller.py  enterprise_delete_controller.py  enterprise_detail_controller.py  enterprise_list_controller.py
src/controllers/product/: product_create_controller.py  product_delete_controller.py  product_detail_controller.py  product_list_controller.py
src/controllers/service_order/: service_order_change_status_controller.py  service_order_create_controller.py  service_order_delete_controller.py  service_order_detail_controller.py  service_order_list_controller.py
src/forms/: cargo_do_funcionario_form.py  cargo_do_funcionario_model_form.py  cargo_funcionario_form.py  client_form.py  cliente_form.py  cliente_model_form.py  conta_a_receber_form.py  conta_a_receber_model_form.py  conta_receber_form.py  empresa_form.py  empresa_model_form.py  endereco_form.py  escolaridade_form.py  escolaridade_model_form.py  fornecedor_form.py  fornecedor_model_form.py  funcionario_form.py  funcionario_model_form.py  item_da_ordem_de_servico_form.py  item_da_ordem_de_servico_model_form.py  item_ordem_servico_form.py  marca_form.py  marca_model_form.py  ordem_de_servico_form.py  ordem_de_servico_model_form.py  ordem_servico_form.py  produto_form.py  produto_model_form.py  telefones_form.py
src/main/: server.py
src/main/config/: app.py  (+4 more)
src/models/: cargo_do_funcionario_model.py  cargo_funcionario_model.py  cliente_model.py  conta_a_receber_model.py  conta_receber_model.py  empresa_model.py  endereco_model.py  escolaridade_model.py  fornecedor_model.py  funcionario_model.py  item_da_ordem_de_servico_model.py  item_ordem_servico_model.py  marca_model.py  ordem_de_servico_model.py  ordem_servico_model.py  produto_model.py  telefones_model.py
src/protocols/: controller.py  db_add_one_operation.py  db_get_all_operation.py  flask_wtf_controller.py  form_controller.py  genders.py  validaton.py
src/services/: base_model.py  database.py  flask_sql_alchemy_operations.py
src/templates/: base.html  index.html
src/utils/: all_types.py  flask_wtf_operations.py  flask_wtf_validation.py  form_from_model.py  mapper.py  sql_model_converter.py  sql_model_validation.py
src/views/: client_create_view.py  client_index_view.py  client_views.py  index_view.py  root_views.py
(+165 files in other folders)
