[project]
name = "sistema_ordens_servicos"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gabriel Bitencourt Marin", email = "gabrielbitercourt@gmail.com"},
]
dependencies = [
    "Flask-SQLAlchemy~=3.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pyprojectx]
main = ["pdm"]

[tool.pdm]
distribution = false
