[project]
name = "sistema_ordens_servicos"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gabriel Bitencourt Marin", email = "gabrielbitercourt@gmail.com"},
]
dependencies = [
    "Flask-SQLAlchemy~=3.1",
    "python-dotenv~=1.0",
    "Flask-WTF~=1.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pyprojectx]
main = ["pdm"]

[tool.pyprojectx.aliases]
install = "pdm install"
run = "pdm run"
start = "@run flask run"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "pyright~=1.1",
    "ruff~=0.6",
    "djlint~=1.35",
]
